--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.6
+aiolimiter==1.1.0
 aiosignal==1.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
@@ -16,6 +17,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 coloredlogs==15.0.1
 contourpy==1.3.0
+coverage==7.6.7
 cryptography==43.0.3
 cycler==0.12.1
 dataclasses-json==0.6.7
@@ -56,6 +58,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+iniconfig==2.0.0
 iopath==0.1.10
 Jinja2==3.1.4
 jiter==0.7.1
@@ -119,6 +122,7 @@ pi_heif==0.20.0
 pikepdf==9.4.2
 pillow==10.4.0
 pillow_heif==0.20.0
+pluggy==1.5.0
 portalocker==3.0.0
 propcache==0.2.0
 proto-plus==1.25.0
@@ -138,6 +142,7 @@ pyparsing==3.2.0
 pypdf==5.1.0
 PyPDF2==3.0.1
 pypdfium2==4.30.0
+pytest==8.3.3
 python-dateutil==2.8.2
 python-docx==1.1.2
 python-dotenv==1.0.1
@@ -173,6 +178,7 @@ threadpoolctl==3.5.0
 tiktoken==0.8.0
 timm==1.0.11
 tokenizers==0.20.3
+tomli==2.1.0
 torch==2.5.1
 torchvision==0.20.1
 tqdm==4.67.0
@@ -190,12 +196,4 @@ uvicorn==0.32.1
 uvloop==0.21.0
 watchfiles==0.24.0
 wcwidth==0.2.13
-webencodings==0.5.1
-websockets==14.1
-wrapt==1.16.0
-xlrd==2.0.1
-XlsxWriter==3.2.0
-yarl==1.17.2
-zipp==3.21.0
-
-aiolimiter~=1.1.0
+webencodings==0
