--- a/requirements.txt
+++ b/requirements.txt
@@ -143,6 +143,7 @@ pypdf==5.1.0
 PyPDF2==3.0.1
 pypdfium2==4.30.0
 pytest==8.3.3
+pytest-asyncio==0.24.0
 python-dateutil==2.8.2
 python-docx==1.1.2
 python-dotenv==1.0.1
@@ -196,4 +197,10 @@ uvicorn==0.32.1
 uvloop==0.21.0
 watchfiles==0.24.0
 wcwidth==0.2.13
-webencodings==0
+webencodings==0.5.1
+websockets==14.1
+wrapt==1.16.0
+xlrd==2.0.1
+XlsxWriter==3.2.0
+yarl==1.17.2
+zipp==3.21.0
